--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "prod": "ng serve --configuration prod"
+    "prod": "ng serve --configuration prod",
+    "prodBuild": "ng build --configuration prod"
   },
   "private": true,
   "dependencies": {
